Jan. 9th 2024 First Commit

--- a/后端.md
+++ b/后端.md
@@ -3123,7 +3123,7 @@ conn.close();
 
 ## 快速入门
 
-- mybatis-config.xml（MyBatis核心配置文件）
+- <span id="mybatis-config.xml">mybatis-config.xml</span>（MyBatis核心配置文件）
 
   > 用于替换连接信息，解决硬编码问题
 
@@ -3133,20 +3133,30 @@ conn.close();
     PUBLIC "-//mybatis.org//DTD Config 3.0//EN"
     "http://mybatis.org/dtd/mybatis-3-config.dtd">
   <configuration>
-    <environments default="development">
-      <environment id="development">
-        <transactionManager type="JDBC"/>
-        <dataSource type="POOLED">
-          <property name="driver" value="${driver}"/>
-          <property name="url" value="${url}"/>
-          <property name="username" value="${username}"/>
-          <property name="password" value="${password}"/>
-        </dataSource>
-      </environment>
-    </environments>
-    <mappers>
-      <mapper resource="SQL映射文件位置"/>
-    </mappers>
+      <properties resource="配置文件如：jdbc.properties"/>
+      <!-- 用于简化SQL映射文件中resultType属性的全路径类名的书写
+      <typeAliases>
+          <package name="包扫描路径如：cn.langh.domain"/>
+      </typeAliases>
+      -->
+      <environments default="development">
+          <environment id="development">
+              <transactionManager type="JDBC"/>
+              <dataSource type="POOLED">
+                  <property name="driver" value="${driver}"/>
+                  <property name="url" value="${url}"/>
+                  <property name="username" value="${username}"/>
+                  <property name="password" value="${password}"/>
+              </dataSource>
+          </environment>
+      </environments>
+      <mappers>
+          <mapper resource="SQL映射文件1位置"/>
+          <mapper resource="SQL映射文件2位置"/>
+          <!-- 满足一定条件可直接用包扫描 
+          <package name="包扫描路径如：cn.langh.mappper"/> 
+          -->
+      </mappers>
   </configuration>
   ```
 
@@ -3158,9 +3168,9 @@ conn.close();
     PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
     "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
   <mapper namespace="命名空间">
-    <select id="sql的id" resultType="返回的值的类型">
-      select * from Blog where id = #{id}
-    </select>
+      <select id="sql的id" resultType="返回的值的类型(pojo类的全路径限定名)">
+          select * from Blog where id = #{id}
+      </select>
   </mapper>
   ```
 
@@ -3253,7 +3263,7 @@ conn.close();
 
 - 释放资源
 
-- 如果Mapper接口的名称和sql映射文件的名称相同，并在同一目录下，则可以使用包扫描的方式简化sql映射文件的加载
+- 如果Mapper接口的名称和sql映射文件的名称相同，并在同一目录下，则可以使用包扫描的方式**简化sql映射文件的加载**
 
   ```xml
   <!-- mybatis-config.xml 文件内  -->
@@ -3284,8 +3294,8 @@ conn.close();
   - [mappers（映射器）](https://mybatis.net.cn/configuration.html#mappers)
 
 - **environments**：配置数据库连接环境信息。可以配置多个environment，通过default属性切换不同的environment
-- **typeAliases**：可指定pojo包，会为包中的实体类自动取类型别名，别名不区分大小写，在mapper配置中的resultType中可使用该别名
-- 配置标签是需要遵循一定的顺序
+- **typeAliases**：可指定pojo包，会为包中的实体类自动取类型别名，**别名不区分大小写**，在mapper配置中的resultType中可使用该别名，**用于简化resultType中全路径类名的书写**
+- **<font color=blue>配置标签是需要遵循一定的顺序</font>**
 
 
 
@@ -3322,8 +3332,8 @@ conn.close();
     
     ```xml
     <resultMap id="resultMap_01" type="user">
-    	<result column="\列名称\" property="\实体类的属性名\"/>
-        <result id="\列名称\" property="\实体类的属性名\"/>
+    	<result column="列名称" property="实体类的属性名"/>
+        <result id="列名称" property="实体类的属性名"/>
     </resultMap>
     
     <select id="selectAll" resultType="reusltMap_01">
@@ -3333,15 +3343,15 @@ conn.close();
 
 - 参数占位符
 
-  - #{\参数\\}：会将其替换为" **?** "。为了防止sql注入
-  - ${\参数\\}：拼接sql，会存在sql注入问题
+  - `#{参数}`：会将其替换为" **?** "。为了防止sql注入
+  - `${参数}`：拼接sql，会存在sql注入问题
 
 - 参数类型：select标签中的 **parameterType** 可以设置所传递的参数类型，可以省略
 
 - 特殊字符的处理：
 
-  - 转义字符：<：\&lt;
-  - cData区：将字符写在\<![CDATA[ 内容 ]]>中
+  - 转义字符：<：`&lt;`
+  - cData区：将字符写在`<![CDATA[ 内容 ]]>`中
   
 - 添加语句中的主键返回
 
@@ -4343,7 +4353,7 @@ public class BookServiceImpl implements BookService {
   - 注解：`@Configuration`
   - 添加外部配置：`@ImportResource("applicationContext.xml")`
   - 组件扫描：`@ComponentScan`
-  - 导入其他配置类：`@Import({jdbcConfig.class,...})`
+  - 导入其他配置类：`@Import({jdbcConfig.class,...})`（其他配置类上不用加`@Configuration`）
   - 获取容器：`new AnnotationConfigApplicationContext(SpringConfig.class)`
 
 
@@ -4382,44 +4392,6 @@ public class BookServiceImpl implements BookService {
       </dependency>
       ```
   
-      
-
-
-
-### 数据源对象管理
-
-第三方bean的管理
-
-- 定义一个方法获得要管理的对象,参数传递需要的引用对象
-- 添加 @Bean 表示方法的返回值为bean
-- 第三方bean的依赖注入
-  - 引用类型：方法形参
-  - 简单类型：成员变量
-
-```java
-@PropertySource("jdbc.properties")
-public class JdbcConfig {
-
-    @Value("${jdbc.driver}")
-    private String driver;
-    @Value("${jdbc.url}")
-    private String url;
-    @Value("${jdbc.username}")
-    private String username;
-    @Value("${jdbc.password}")
-    private String password;
-
-    @Bean
-    public DataSource dataSource(形参){
-        DruidDataSource ds = new DruidDataSource();
-        ds.setDriverClassName(driver);
-        ds.setUrl(url);
-        ds.setUsername(username);
-        ds.setPassword(url);
-        return ds;
-    }
-}
-```
 
 
 
@@ -4429,61 +4401,111 @@ public class JdbcConfig {
 
 - 位置坐标
 
-```xml
-<dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.2.10.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>5.2.10.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.5.10</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.0.9</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.46</version>
-        </dependency>
-    </dependencies>
-```
+  ```xml
+  <dependencies>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>5.2.10.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis</artifactId>
+          <version>3.5.10</version>
+      </dependency>
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>druid</artifactId>
+          <version>1.0.9</version>
+      </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.46</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+          <version>5.2.10.RELEASE</version>
+      </dependency>
+      <!--spring整合mybatis的包，由spring提供接口，mybatis实现-->
+      <dependency>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis-spring</artifactId>
+          <version>1.3.1</version>
+      </dependency>
+  </dependencies>
+  ```
+
+- 需要加载哪些bean？[可对应查看mybatis的核心配置文件](#mybatis-config.xml)
+
+- 配置druidbean
+
+  - xml配置
+
+    ```xml
+    <!-- 添加约束 -->
+    <context:property-placeholder location="classpath:jdbc.properties"/>
+    
+    <bean id="druidDataSource" class="com.alibaba.druid.pool.DruidDataSource">
+        <property name="url" value="${jdbc.url}"/>
+        <property name="driverClassName" value="${jdbc.driverClassName}"/>
+        <property name="username" value="${jdbc.username}"/>
+        <property name="password" value="${jdbc.password}"/>
+    </bean>
+    ```
+
+  - 注解配置
+
+    ```java
+    //@PropertySource("jdbc.properties")
+    @PropertySource("classpath:jdbc.properties")
+    public class JdbcConfig {
+    
+        @Value("${jdbc.driver}")
+        private String driver;
+        @Value("${jdbc.url}")
+        private String url;
+        @Value("${jdbc.username}")
+        private String username;
+        @Value("${jdbc.password}")
+        private String password;
+    
+        @Bean
+        public DataSource dataSource(){
+            DruidDataSource ds = new DruidDataSource();
+            ds.setDriverClassName(driver);
+            ds.setUrl(url);
+            ds.setUsername(username);
+            ds.setPassword(url);
+            return ds;
+        }
+    }
+    ```
+
 
 - MybaitsConfig
 
-```java
-public class MybatisConfig {
-    @Bean
-    SqlSessionFactoryBean sqlSessionFactory(DataSource dataSource){
-        SqlSessionFactoryBean ssfb = new SqlSessionFactoryBean();
-        ssfb.setTypeAliasesPackage("cn.langh.domain");
-        ssfb.setDataSource(dataSource);
-        return ssfb;
-    }
-
-    @Bean
-    MapperScannerConfigurer mapperScannerConfigurer(){
-        MapperScannerConfigurer msc = new MapperScannerConfigurer();
-        msc.setBasePackage("cn.langh.dao");
-        return msc;
-    }
-}
-```
+  ```java
+  public class MybatisConfig {
+      @Bean
+      SqlSessionFactoryBean sqlSessionFactory(DataSource dataSource){
+          SqlSessionFactoryBean ssfb = new SqlSessionFactoryBean();
+          // 设置类型别名的包，用于简化SQL映射文件中resultType属性的全路径类名的书写
+          ssfb.setTypeAliasesPackage("cn.langh.domain");
+          ssfb.setDataSource(dataSource);
+          return ssfb;
+      }
+  
+      @Bean
+      // 设置SQL映射文件包扫描的位置
+      MapperScannerConfigurer mapperScannerConfigurer(){
+          MapperScannerConfigurer msc = new MapperScannerConfigurer();
+          msc.setBasePackage("cn.langh.dao");
+          return msc;
+      }
+  }
+  ```
 
 
 
@@ -4773,93 +4795,256 @@ public class MybatisConfig {
 
 ## Spring事务
 
+> 本篇主要记录基于**注解**实现**声明式**事务
+
 ### 快速入门
 
-- 一般在业务层接口（Service接口）的方法上添加标注 @Transactional
-  - @Transactional 可标注在类或接口上，表示该类或接口中所有方法都添加事务
+- 依赖
+
+  ```xml
+  <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>略</version>
+  </dependency>
+  ```
+
+- 一般在业务层接口（Service接口）的方法上添加标注 `@Transactional`
+  - `@Transactional` 可标注在类或接口上，表示该类或接口中所有方法都添加事务
+
+- 配置DataSource（以xml为例）
+
+  ```xml
+  <context:property-placeholder location="classpath:jdbc.properties"/>
+  
+  <bean id="druidDataSource" class="com.alibaba.druid.pool.DruidDataSource">
+      <property name="url" value="${jdbc.url}"/>
+      <property name="driverClassName" value="${jdbc.driverClassName}"/>
+      <property name="username" value="${jdbc.username}"/>
+      <property name="password" value="${jdbc.password}"/>
+  </bean>
+  ```
+
+- 配置JdbcTemplate（以注解为例）
+
+  ```java
+  @Bean
+  public JdbcTemplate jdbcTemplate(DataSource datasource){
+      JdbcTemplate jdbcTemplate = new JdbcTemplate();
+      jdbcTemplate.setDataSource(dataSource);
+      return jdbcTemplate;
+  }
+  ```
 
 - 添加事务管理器
 
+  - XML配置事务管理器
 
-```java
-@Bean
-public PlatformTransactionManager transactionManager(DataSource dataSource){
-    DataSourceTransactionManager transactionManager = new DataSourceTransactionManager();
-    transactionManager.setDataSource(dataSource);
-    return transactionManager;
-}
-```
+    ```xml
+    <!-- 添加 tx 约束 -->
+    <bean id="transactionManager" class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
+        <property name="dataSource" ref="druidDataSource"/>
+    </bean>
+    ```
 
-- SpringConfig 上添加标注 @EnableTransactionManagement
+  - 注解配置事务管理器
+
+    ```java
+    @Bean
+    public DataSourceTransactionManager transactionManager(DataSource dataSource){
+        DataSourceTransactionManager transactionManager = 
+            new DataSourceTransactionManager();
+        transactionManager.setDataSource(dataSource);
+        return transactionManager;
+    }
+    ```
+
+- 开启事务管理器
+
+  - 方法一：SpringConfig 上添加标注 `@EnableTransactionManagement`
+
+  - 方法二：xml配置
+
+    ```xml
+    <tx:annotation-driven transaction-manager="transactionManager"/>
+    ```
 
 
 
 
-### Spring事务角色
+### 事务传播行为
 
 - 事务角色
 
-  - 事务管理员：发起事务方，在Spring中通常指代业务层开启事务的方法
-  - 事务协调员：加入事务方，在Spring中通常指代数据层方法，也可以是业务层方法
+  - 事务管理者：发起事务方，在Spring中通常指代业务层开启事务的方法
+  - 事务协调者：加入事务方，在Spring中通常指代数据层方法，也可以是业务层方法
+
+  ```java
+  // 事务管理者
+  @Transactional
+  public void 转账(变动金额数, 转账方, 收账方) {
+      扣钱(变动金额数, 转账方);
+      加钱(变动金额数, 收账方);
+  }
+  
+  // 事务协调者
+  @Transactional(态度)
+  public void 扣钱(变动金额数, 变动金额方) {
+      调用SQL语句扣除指定对象指定金额;
+  }
+  
+  // 事务协调者
+  @Transactional(态度)
+  public void 加钱(变动金额数, 变动金额方) {
+      调用SQL语句增加指定对象指定金额;
+  }
+  ```
 
 - 事务传播行为
 
-  - 事务协调员对管理员的态度
-  - 通过@Transactional中的propagation属性设置（Propagation.属性）
+  - **事务协调员对管理员的态度**：是加入管理员的事务，还是新开个事务，...？
+  - 通过 `@Transactional` 中的 `propagation` 属性设置（`Propagation.属性`）
 
-  | 传播属性      | 事务管理员 | 事务协调员态度 |
-  | ------------- | ---------- | -------------- |
-  | REQUIRED      | 已开启事务 | 加入该事务     |
-  |               | 无         | 新建事务       |
-  | REQUIRES_NEW  | 已开启事务 | 新建事务       |
-  |               | 无         | 新建事务       |
-  | SUPPORTS      | 已开启事务 | 加入该事务     |
-  |               | 无         | 无             |
-  | NOT_SUPPORTED | 已开启事务 | 无             |
-  |               | 无         | 无             |
-  | MANDATORY     | 已开启事务 | 加入该事务     |
-  |               | 无         | ERROR          |
-  | NEVER         | 已开启事务 | ERROR          |
-  |               | 无         | 无             |
-  | NESTED        |                            |
+  <table>
+      <tr>
+          <th><font color="red">协调者</font>的传播属性</th>
+          <th>管理者<font color="red">状态</font></th>
+          <th>协调者<font color="red">态度</font></th>
+      </tr>
+      <tr>
+          <td rowspan="2">REQUIRED(默认)</td>
+          <td>已开启事务</td>
+          <td>加入该事务</td>
+      </tr>
+      <tr>
+          <td>无</td>
+          <td>新建事务</td>
+      </tr>
+      <tr>
+          <td rowspan="2">REQUIRES_NEW</td>
+          <td>已开启事务</td>
+          <td>新建事务</td>
+      </tr>
+      <tr>
+          <td>无</td>
+          <td>新建事务</td>
+      </tr>
+      <tr>
+          <td rowspan="2">SUPPORTS</td>
+          <td>已开启事务</td>
+          <td>加入该事务</td>
+      </tr>
+      <tr>
+          <td>无</td>
+          <td>无</td>
+      </tr>
+      <tr>
+          <td rowspan="2">NOT_SUPPORTED</td>
+          <td>已开启事务</td>
+          <td>无</td>
+      </tr>
+      <tr>
+          <td>无</td>
+          <td>无</td>
+      </tr>
+      <tr>
+          <td rowspan="2">MANDATORY</td>
+          <td>已开启事务</td>
+          <td>加入该事务</td>
+      </tr>
+      <tr>
+          <td>无</td>
+          <td>error</td>
+      </tr>
+      <tr>
+          <td rowspan="2">NEVER</td>
+          <td>已开启事务</td>
+          <td>error</td>
+      </tr>
+      <tr>
+          <td>无</td>
+          <td>无</td>
+      </tr>
+      <tr>
+          <td>NESTED</td>
+          <td colspan="2">设置savePoint，一旦事务回滚，事务将回滚到savePoint处，交由客户响应提交/回滚</td>
+      </tr>
+  </table>
+
+
+
+### 事务隔离级别
+
+- 各种隔离级别解决并发问题的能力
+
+  | 隔离级别         | 脏读 | 不可重复读 | 幻读 |
+  | ---------------- | ---- | ---------- | ---- |
+  | READ UNCOMMITTED | ×    | ×          | ×    |
+  | READ COMMITTED   | √    | ×          | ×    |
+  | REPEATABLE READ  | √    | √          | ×    |
+  | SERIALIZABLE     | √    | √          | √    |
+
+- 各种数据库对事务隔离级别的支持程度
+
+  | 隔离级别         | Oracle  | MySQL   |
+  | ---------------- | ------- | ------- |
+  | READ UNCOMMITTED | ×       | √       |
+  | READ COMMITTED   | √(默认) | √       |
+  | REPEATABLE READ  | ×       | √(默认) |
+  | SERIALIZABLE     | √       | √       |
+
+- 设置隔离级别`@Transactional(isolation = Isolation.隔离级别)`
+  - `DEFAULT`：使用数据库各自的默认隔离级别
+  - `READ_UNCOMMITTED`：读未提交
+  - `READ COMMITTED`：读已提交
+  - `REPEATABLE READ`：可重复读
+  - `SERIALIZABLE`：串行化
 
 
 
 ### Spring事务的其他配置
 
-@Transactional注解源码
+- 一些属性
+  - `readOnly`：默认false，true表示只能做查询操作
+  - `timeout`：设置一个事务的超时时间，在该时间内未完成，抛出异常并回滚。默认-1表示永不超时
+  - `rollbackFor`：设置哪些异常回滚（默认Error和RuntimeException回滚）
+  - `noRollbackFor`：设置哪些异常不回滚（默认Error和RuntimeException回滚）
+  - `propagation`：事务传播行为
+  - `isolation`：事务隔离级别
 
-```java
-public @interface Transactional {
-    @AliasFor("transactionManager")
-    String value() default "";
+- `@Transactional`注解中的源码
 
-    @AliasFor("value")
-    String transactionManager() default "";
+  ```java
+  public @interface Transactional {
+      @AliasFor("transactionManager")
+      String value() default "";
+  
+      @AliasFor("value")
+      String transactionManager() default "";
+  
+      String[] label() default {};
+  
+      Propagation propagation() default Propagation.REQUIRED;
+  
+      Isolation isolation() default Isolation.DEFAULT;
+  
+      int timeout() default -1;
+  
+      String timeoutString() default "";
+  
+      boolean readOnly() default false;
+  
+      Class<? extends Throwable>[] rollbackFor() default {};
+  
+      String[] rollbackForClassName() default {};
+  
+      Class<? extends Throwable>[] noRollbackFor() default {};
+  
+      String[] noRollbackForClassName() default {};
+  }
+  ```
 
-    String[] label() default {};
-
-    Propagation propagation() default Propagation.REQUIRED;
-
-    Isolation isolation() default Isolation.DEFAULT;
-
-    int timeout() default -1;
-
-    String timeoutString() default "";
-
-    boolean readOnly() default false;
-
-    //默认遇到Error或运行是异常时回滚数据，其他异常需要是要手动设置
-    Class<? extends Throwable>[] rollbackFor() default {};
-
-    String[] rollbackForClassName() default {};
-
-    //默认遇到Error或运行是异常时回滚数据，其中不需要回滚的异常需要手动设置
-    Class<? extends Throwable>[] noRollbackFor() default {};
-
-    String[] noRollbackForClassName() default {};
-}
-```
+  
 
 
 
