Jan. 10th 2024 First Commit

--- a/后端.md
+++ b/后端.md
@@ -5044,7 +5044,6 @@ public class BookServiceImpl implements BookService {
   }
   ```
 
-  
 
 
 
@@ -8201,7 +8200,78 @@ spring:
           await-termination-period: 10s
   ```
 
-  
+
+
+
+
+
+### Vilidation
+
+> 本篇主要记录在**spring-boot**环境下的数据校验
+
+- 依赖
+
+  ```xml
+  <!-- 含 hibernate-validator 依赖 -->
+  <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+  </dependency>
+  ```
+
+- 使用（以spring-boot-web应用为例）
+
+  - 定义pojo类
+
+    ```java
+    @Data
+    public class User {
+        @NotNull(message="username为空")
+        private String username;
+        @NotNull
+        private String password;
+    }
+    ```
+
+  - controller
+
+    ```java
+    @RestController
+    @Validated
+    public class UserController {
+        public String volidate(@Valid User user) {
+            return "ok"；
+        }
+    }
+    ```
+
+- 常用注解
+
+  | 注解                       | 说明                                                 |
+  | -------------------------- | ---------------------------------------------------- |
+  | @Null                      | 只能为null                                           |
+  | @NotNull                   | 不能为null                                           |
+  | @AssertFalse               | 必须为false                                          |
+  | @AssertTrue                | 必须为true                                           |
+  | @DecimalMax(value)         | 不大于指定值                                         |
+  | @DecimalMin(value)         | 不小于指定值                                         |
+  | @Max(value)                | 不大于指定值                                         |
+  | @Min(value)                | 不小于指定值                                         |
+  | @Digits(integer, fraction) | 必须为一个小数，整数位数不超过i，小数位数不超过f     |
+  | @Past                      | 必须为过去的日期                                     |
+  | @Future                    | 必须为将来的日期                                     |
+  | @PastOrPresent             | 日期不超过现在                                       |
+  | @FutureOrPresent           | 日期不早于现在                                       |
+  | @Pattern(regexp)           | 必须符合指定的正则表达式                             |
+  | @Size(min, max)            | 大小在min到max之间（Array、Collection、Map、String） |
+  | @Length(max, min)          | 字符串长度在min到max之间（String）                   |
+  | @NotEmpty                  | 不为空（Array、Collection、Map、String）             |
+  | @NotBlank                  | 字符串不为空（String）                               |
+  | @Email                     | 格式必须为email格式                                  |
+
+
+
+
 
 ### Mail
 
