--- a/后端2.md
+++ b/后端2.md
@@ -2785,9 +2785,9 @@ public class MyDao {
       }
       ```
 
-- 使用
+- 使用：略
 
-- 卸载
+- 卸载：略
 
 
 
@@ -3229,7 +3229,7 @@ public class MyDao {
     // 底层调用StringBuilder的拼接方法，返回一个String对象的引用
     String s4 = s1+s2;
     // "ab"在字符串常量池中已存在，不会再重复存放，只返回该引用
-    String s5 = (s1+s2).intern();
+    String s5 = s4.intern();
     System.out.println(s3==s4);  // false
     System.out.println(s3==s5);  // true
     ```
@@ -3248,8 +3248,12 @@ public class MyDao {
     System.out.println(s3 == s4);
     ```
 
-    - jdk 7 之前：inter()方法会把第一次遇到的字符串实例复制到永久代的字符串常量池中，返回的也是永久代里面这个字符串实例的引用
-    - jdk 7 及之后：由于字符串常量在堆中，为节省内存，inter()方法只将第一次遇到的字符串的引用放入字符串常量池（上述代码中 s3 和 s4 均为堆引用）
+    - jdk 7 之前：intern()方法会把第一次遇到的字符串实例**复制**到永久代的字符串常量池中，返回的也是永久代里面这个字符串实例的引用
+    - jdk 7 及之后：由于字符串常量在堆中，为节省内存，intern()方法只将**第一次遇到的** **堆上字符串对象的引用**放入字符串常量池，并返回**堆上字符串对象的引用**
+      - `字符串常量池中对象.intern()`：返回字符串常量池中对象引用
+      - `堆中字符串对象.intern()`：将堆中该字符串对象的**引用**放入字符串常量池，并返回该引用
+    
+  - **字符串常量池是程序运行时加载的，而不是类被加载时就从静态常量池中加载**
 
 - 静态变量的存储：JDK7及之后的版本中，静态变量是存放在[堆中的Class对象](#加载)中，脱离的永久代
 
