Jan. 11st 2024 First Commit

--- a/有趣的项目.md
+++ b/有趣的项目.md
@@ -87,7 +87,93 @@
   }
   ```
 
+
+
+
+### 监听器
+
+> 事实上，为了代码的美观，可以将数据处理部分放在监听器（ReadListener）中。
+>
+> 最后调用 void doRead() 方法做动作读取
+
+- 使用
+
+  ```java
+  EasyExcel
+      .read(file)
+      .head(映射模型.class)
+      .registerReadListener(new ReadListener<映射模型>() { ... })
+      .sheet()
+      .doRead();
+  ```
+
   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
